# Game_of_Life

./: .gitignore  .run.sh.swp  Backend.cpp  Backend.h  CMakeLists.txt  Controls.cpp  Controls.h  Makefile  PopCreator.cpp  PopCreator.h  README.md  cell_matrix.cpp  cell_matrix.h  cell_matrix.ui  cellmatrix.cpp  cellmatrix.h  cellmatrix.ui  main.cpp  mainwindow.cpp  mainwindow.h  statistics.cpp  statistics.h  statistics.ui
src/cpp/: Backend.cpp  mainwindow.cpp  statistics.cpp
src/h/: Backend.h  Controls.h  cellmatrix.h  mainwindow.h  statistics.h
